<resources>
    <!--Welcome Screen-->
    <string name="welcome_title">Concussion Checker</string>
    <string name="recovery_back_to_profile">Back to profile</string>
    <string name="reportlogo">reportLogo</string>


    <!--Splash Page-->
    <string name="splash_tagline"><i>An app to help recognise the symptoms of concussion \n and manage recovery</i></string>
    <string name="app_name">Concussion Checker</string>

    <!--Login Page -->
    <string name="sign_up_here"><i>Sign up here...</i></string>
    <string name="login_to_continue"> <i>Log in to continue...</i></string>
    <string name="welcome_message">Welcome To Concussion Checker</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login">Login</string>
    <string name="new_user_reg_here">New User? Register Here</string>
    <string name="login_email">Email</string>
    <string name="login_pass">Password</string>
    <string name="reg_required_fields"><i>* Required Fields</i></string>
    <string name="btn_login">Login</string>

    <!--Hints -->
    <string name="name_hint">Full Name *</string>
    <string name="email_hint">Email *</string>
    <string name="phone_number_hint">Phone Number *</string>
    <string name="date_of_birth_hint">Date of Birth *</string>
    <string name="emergency_contact_hint">Emergency Contact *</string>
    <string name="emergency_contact_phone_number_hint">Emergency Contact Phone Number *</string>
    <string name="team_coached_hint">Team Coached *</string>
    <string name="password_hint">Password *</string>

    <!--Registration Screen buttons -->
    <string name="register_btn">Register</string>
    <string name="back_to_login_screen_btn">Back to login screen</string>
    <string name="registration_success">Registration Successful</string>
    <string name="required_fields">* Required Fields</string>
    <string name="player_register_btn">Register</string>

    <!--Red Flag Page-->
    <string name="call_ambulance">Call Ambulance</string>
    <string name="continue_diagnosis">Continue</string>
    <string name="red_flags">RED FLAGS</string>
    <string name="redflag_warning">If any of the following signs are observed player should be immediately removed. If no healthcare professional present call an ambulance</string>
    <string name="red_flag_symptoms">• Neck pain or tenderness \n• Weakness or tingling/burning in arms or legs \n• Increasingly restless, agitated or  combative \n• Severe or increasing headache \n• Deteriorating conscious state \n• Seizure or convulsion \n• Vomiting \n• Loss of consciousness</string>
    <string name="visual_signs_description">Check for this visual signs that could suggest concussion</string>

    <!--Memory Questions-->
    <string name="memory_assessment_title">Memory Assessment Test</string>
    <string name="memory_assesstment_description">Ask the following questions and record the results \nMark Yes for correct / No for incorrect</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="Q1">What venue are we at today?</string>
    <string name="Q2">Which half is it now?</string>
    <string name="Q3">Who scored last in \nthe game?</string>
    <string name="Q4">What team did you  play \nlast week?</string>
    <string name="Q5">Did your team win the \nlast game?</string>

    <!--Observable Signs-->
    <string name="observable_signs_title">Observable Signs</string>
    <string name="observable_signs_q1">Lying motionless on the playing surface</string>
    <string name="observable_signs_q2">Balance/gait difficulties/motor incoordination: stumbling slow/ laboured movements</string>
    <string name="observable_signs_q3">Disorientation or confusion, or an inability to respond appropriately to questions</string>
    <string name="observable_signs_q4">Blank or vacant look</string>
    <string name="observable_signs_q5">Facial injury after head trauma</string>

    <!--Add Report-->
    <string name="profile_incidents">Incidents</string>
    <string name="profile_incident_report">Incident Report</string>
    <string name="profile_recovery">Recovery</string>
    <string name="profile_recovery_advice">Recovery Advice</string>
    <string name="incident_report_title">Add Incident Report</string>
    <string name="incident_report_heading">Fill in the details of the incident below</string>

    <!--Image content Descriptions-->
    <string name="logo_Image">Logo</string>
    <string name="orange_warning">orange_flag</string>
    <string name="red_warning">red_flag</string>

    <!--Incident List View-->
    <string name="incidentList_incident_report">Incident Report:</string>
    <string name="incidentListCSA">Cervical Spine Assessment:</string>
    <string name="incidentListGCS">Glasgow Coma Scale Test:</string>
    <string name="incidentListMemory">Memory Questions Test:</string>
    <string name="incidentListOBS">Observable Signs Test:</string>
    <string name="incidentList_RedFlag">Red Flag Test:</string>
    <string name="incidentList_CoachName">Coach Name</string>
    <string name="incidentList_Date">Date:</string>

    <!--Playersearch screen -->
    <string name="player_search_name"><b>Name:</b></string>
    <string name="player_search_email">Email:</string>
    <string name="player_search_phone">Phone:</string>
    <string name="player_search_EC">Emergency Contact:</string>
    <string name="player_search_EC_phone">Contact\'s Phone:</string>
    <string name="searchUserLogo">search_user_icon</string>
    <string name="player_logo">player_logo</string>
    <string name="red_cross_image">TODO</string>
    <string name="recovery_image">recovery_image</string>
    <string name="player_prof_update">UPDATE</string>
    <string name="delete_profile">DELETE PROFILE</string>
    <string name="coach_update">UPDATE</string>
    <string name="coach_delete">DELETE PROFILE</string>


    <!--Symptoms Page-->
    <string name="symptoms_title">Symptoms</string>
    <string name="symptoms_intro">Check if any of the following symptoms are present</string>
    <string name="symptom1">Headache</string>
    <string name="symptom2">"Pressure in Head"</string>
    <string name="symptom3">Balance Problems</string>
    <string name="symptom4">Nausea or Vomiting</string>
    <string name="symptom5">Drowsiness</string>
    <string name="symptom6">Dizziness</string>
    <string name="symptom7">Blurred Vision</string>
    <string name="symptom8">Sensitivity to Light</string>
    <string name="symptom9">Sensitivity to Noise</string>
    <string name="symptom10">Fatigue or Low Energy</string>
    <string name="symptom11">"Don't Feel Right"</string>
    <string name="symptom12">More Emotional</string>
    <string name="symptom13">More irritable</string>
    <string name="symptom14">Sadness</string>
    <string name="symptom15">Nervous or anxious</string>
    <string name="symptom16">Neck Pain</string>
    <string name="symptom17">Difficulty Concentrating</string>
    <string name="symptom18">Difficulty Remembering</string>
    <string name="symptom19">Feeling slowed down</string>
    <string name="symptom20">"Feeling Like a Fog"</string>

    <!--Coach advice Page-->
    <string name="coach_advice_title"><b>Athletes with Suspected Concussion should: </b></string>
    <string name="coach_advice_points">• Not be left alone initially (at least first  \n \t 1-2 hours) \n• Not drink alcohol \n• Not use recreational/prescription drugs\n• Not be sent home by themselves. They \n\t need to be with a responsible adult \n• Not drive a motor vehicle until cleared \n  by a healthcare professional</string>
    <string name="coach_advice_warning">ANY ATHLETE WITH A SUSPECTED CONCUSSION SHOULD BE IMMEDIATELY REMOVED FROM PRACTICE OR PLAY AND SHOULD NOT RETURN
        TO ACTIVITY UNTIL ASSESSED MEDICALLY, EVEN IF SYMPTOMS RESOLVE</string>
    <string name="profile_logout">LOGOUT</string>
    <string name="incidentListSymptoms">Symptoms:</string>
    <string name="observable_signs">Observable Signs</string>
    <string name="incident_list_player_name">Player Name:</string>
    <string name="recovery_signs"><b>Signs To Watch For</b>\n\n –Worsening Headache \n-Drowsiness \n-Inability to recognise people or places \n-Repeated vomiting \n-Unusual behaviour \n-Seizures \n-Weakness/Numbness in arms or legs \n-Unsteadiness on feet \n-Slurred Speech\n \nIf any of these symptoms arise for first 24-48 hours athlete should go to hospital</string>

    <!--Return to Sport Strategy page-->
    <string name="graduated_return_to_sport_strategy">Graduated Return to Sport Strategy</string>
    <string name="return_to_sport1">NO ACTIVITY \n-Complete mental and physical rest\n-Activities that do not provoke any\n symptoms.\n Stage Goal: Recovery</string>
    <string name="return_to_sport2">LIGHT AEROBIC EXERCISE \n-Keep effort under 70% of maximal HR \n-E.g.: 20 min stationary bike, light run/ \n walk\n Stage Goal: Increase Heart Rate</string>
    <string name="return_to_sport3">SPORT SPECIFIC EXERCISE \n-Low to moderate intensity activity. No\n head impact activities\n Stage Goal: Add movement</string>
    <string name="return_to_sport4">NON CONTACT TRAINING DRILLS \n-Progress to more sport drills. No \n head contact. Start progressive \n resistance training\n Stage Goal: Exercise, coordination,\n and cognitive load</string>
    <string name="return_to_sport5">FULL CONTACT PRACTICE \n-FOLLOWING medical clearance,\n participate in normal training\n activities\n Stage Goal: Restore confidence and\n assess functional skills by coaches</string>
    <string name="return_to_sport6">RETURN TO PLAY/SPORT \n-Normal game play\n-Continue to\n monitor and assess\n periodically</string>

    <!--Coach Profile page-->
    <string name="coach_profile_concussion">DIAGNOSE CONCUSSION NOW!</string>
    <string name="coach_calender">Calender</string>
    <string name="coach_profile_history">Incidents History</string>
    <string name="coach_profile_history_tag">View History</string>
    <string name="coach_player_info_tag">View Players</string>
    <string name="coach_player_info">Player Info</string>
    <string name="profile_sign_out">Sign Out</string>
    <string name="profile_return_to_login">Return to Login</string>
    <string name="coach_profile_concussion_button">START CONCUSSION CHECK!</string>
    <string name="info_button">info_button</string>
    <string name="coach_image">coach_image</string>
    <string name="coach_history">History</string>

    <!--App Info page-->
    <string name="info_page_title">Concussion Checker</string>
    <string name="info_back_btn">Back to Profile</string>
    <string name="crt_5_document">CRT-5 Document</string>
    <string name="info_main">It follows guidelines set out by the Concussion in Sport Group in 2017, based on their document the Concussion Recognition Tool (CRT-5). This is available online via the button below. It is not designed to replace professional medical advice which should always be consulted in any case of a suspected concussion.</string>
    <string name="info_intro">Concussion checker is an app designed to help recognise the symptoms of an on field concussion. It also gives advice to players to assist recovery and their return to sport participation.</string>

    <!--Player recovery advice-->
    <string name="player_recovery_signs"><b>Directly after suspected concussion \nplayers should:</b>\n\n• Not be left alone initially (at least first  \n \t 1-2 hours) \n• Not drink alcohol \n• Not use recreational/prescription drugs\n• Not be sent home by themselves. They \n\tneed to be with a responsible adult \n • Not drive a motor vehicle until cleared\n  by a healthcare professional.</string>
    <string name="advice_return">Return to Sport Strategy</string>

    <!--Medical alert dialog-->
    <string name="medical_advice">This App is not designed to replace professional medical advice or diagnose concussion. It is an advisory tool.</string>
    <string name="warning_title">Warning</string>
    <string name="phone_number">999</string>
    <string name="report_incident_details">report_incident_hint</string>
    <string name="medical_positive">I understand</string>

    <!--Delete profile dialog-->
    <string name="delete_title">Delete Profile</string>
    <string name="delete_message">Do you really want to delete your profile?</string>
    <string name="delete_positive">Delete</string>
    <string name="delete_negative">Cancel</string>
    <string name="log_dialog">Alert Dialog</string>

    <!--Ambulance dialog-->
    <string name="ambulance_title">CALL AMBULANCE?</string>
    <string name="ambulance_message">Do you wish to call an Ambulance?</string>
    <string name="ambulance_positive">CALL</string>
    <string name="ambulance_negative">Cancel</string>
    <string name="login_title">Profile Choice</string>
    <string name="login_message">Choose a Profile...</string>
    <string name="login_player">Player</string>
    <string name="login_coach">Coach</string>
    <string name="orange_flag">orange_flag</string>


</resources>



