...
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:onClick="onButtonClicked"
                android:text="@string/profile_logout" />

            <Button
                android:id="@+id/btn_deleteProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/delete_profile" />


...
